docs/pages/common/css/navbar.css
#full-navbar {
	font-family: Raleway-Light;
	color: white;
	width: 100%;
	top: 0;
	left: 0;
	position: fixed;
	overflow: hidden;
	z-index: 99;
	display: flex;
	justify-content: space-between;
}


#minimized-navbar {
    display: flex;
    align-items: center;
    justify-content: space-between;
}

#main-navbar-section {
    display: flex;
    align-items: center;
}

#main-navbar-section .main-navbar-link {
	color: white;
}

#main-navbar-section li {
    display: flex;
	align-items: center;
}

#main-navbar-section .main-navbar-link.act,
.main-navbar-link:hover {
	font-weight: 900;
}

#main-navbar-section a {
	text-decoration: none;
}

#sidemenu-opener {
	display: none;
	font-size: 30px;
    float: right;
    cursor: pointer;
}


@media (orientation: landscape) {
	#full-navbar {
		font-size: 19px;
		white-space: nowrap;
	}

    #main-navbar-section {
        flex-direction: row;
        gap: 3rem;
        padding: 1rem 3rem;
		overflow-x: scroll;
		/* Prevent the background image from moving when a link is selected */
		background: none !important;
    }

	#minimized-navbar {
		padding: 0 3rem;
		gap: 3rem;
	}

    #minimized-navbar .logo {
        font-family: Raleway-Medium;
        user-select: none;
    }

	body {
		padding-top: 0px !important;
	}
    
    .floating-dropdown-list {
        display: none;
    }

    .floating-dropdown-list-opener:hover .floating-dropdown-list {
        display: flex;
    }
    
}

@media (orientation: portrait) {

	:root {
		--minimized-navbar-height: 4rem;
	}

	#full-navbar {
		font-size: 20px;
	}

	#sidemenu-opener {
		display: flex;
		align-items: center;
		justify-content: center;
	}

    #minimized-navbar {
        width: 100%;
        padding: 0 1rem;
		height: var(--minimized-navbar-height);
    }

	#main-navbar-section {
        position: fixed;
        flex-direction: column;
        justify-content: space-around;
		width: 100%;
		bottom: 0;
		top: var(--minimized-navbar-height);
		left: 100%;
		text-align: center;
		z-index: 100;
		transition: all 0.5s;
		margin: 0;
        padding: 0;
	}

    #main-navbar-section li {
        flex-direction: column;
        align-items: center;
    }

	#main-navbar-section .main-navbar-link {
		flex-direction: column;
		display: flex;
		line-height: 30px;
		/*eliminare sottolineatura*/
		text-decoration: none !important;
	}

	#main-navbar-section .main-navbar-link:hover,
	#main-navbar-section .main-navbar-link.act {
		background: none;
	}

	#main-navbar-section.open {
		left: 0;
	}

}


.floating-dropdown-list-opener {
	flex-direction: column;
	align-items: center;
}

.floating-dropdown-list {
	flex-direction: column;
	gap: 1rem;
	justify-content: space-around;
	padding: 1rem 0;
	margin: 0;
}

